<resources>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">tOCoHq2PZo2CkFiRbcxqvgWFr</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">RqXC63TA73OzEEOrMQigisRZ0Jku6u2wsZBqdHbGnkvmuRTU5P</string>
    <string name="app_name">GoGroup-Buyers</string>
    <string name="mesibo_token">eea9qr5swru10d32z58bx0whmztaafvpb7ni6vc3ree2g4nw3uypigp5tarn1g8f</string>
    <string name="chatCampAppId">6441163417230241792</string>
    <string name="option_login_screen_seller">Seller</string>
    <string name="option_login_screen_user">User</string>
    <string name="shared">GoGroup</string>
    <string name="Validation_Internet_Connection">Please Connect The Internet First</string>
    <string name="login_activity_login_button">LOGIN</string>
    <string name="login_activity_forgot_password_textview">FORGOT PASSWORD ?</string>
    <string name="login_activity_registeration_textview">Not Registered?</string>
    <string name="login_activity_registeration_click_textview">Sign Up</string>
    <string name="login_activity_registeration_here_textview">Please</string>
    <string name="login_activity_email_edittext">Email*</string>
    <string name="login_activity_password_edittext">Password*</string>
    <string name="login_activity_or">Or</string>
    <string name="login_activity_email_validation">Please enter the email</string>
    <string name="login_activity_email_valid_validation">Please enter the valid email</string>
    <string name="login_activity_password_validation">Please enter the password</string>
    <string name="registeration_activity_name"> Name*</string>
    <string name="registeration_activity_name_optional"> Name*(Optional)</string>
    <string name="registeration_activity_email">Email*</string>
    <string name="registeration_activity_email_optional">Email*(Optional)</string>
    <string name="registration_activity_contact">Contact No.*</string>
    <string name="registration_activity_contact_optional">Contact No.*(Optional)</string>
    <string name="registration_tin">TIN no*</string>
    <string name="registration_company_name">Name of Company*</string>
    <string name="registration_location">Location*</string>
    <string name="registration_photographs">Photographs*</string>
    <string name="registration_seller_usp">USP for Seller*</string>
    <string name="registeration_activity_password">Password</string>
    <string name="registeration_activity_confirm_password">Confirm Password</string>
    <string name="registeration_activity_sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="validationUserName">Please enter the Username</string>
    <string name="validationPassword">Please enter the Password</string>
    <string name="validationEmail">Please enter the email</string>
    <string name="validationValidEmail">Please enter the valid email</string>
    <string name="validationConfirmPassword">Please enter the Confirm Password</string>
    <string name="vendor_home_activity_home">Home</string>
    <string name="vendor_home_activity_dashboard">Dashboard</string>
    <string name="vendor_home_activity_setting">Settings</string>
    <string name="vendor_home_activity_about">About</string>
    <string name="vendor_home_activity_upload_products">Upload Products</string>
    <string name="vendor_home_activity_logout">Logout</string>
    <string name="vendor_home_requests">REQUEST</string>
    <string name="vendor_home_accepted">ACCEPTED</string>
    <string name="vendor_home_completed">COMPLETED</string>
    <string name="vendor_home_product_id">Product ID</string>
    <string name="vendor_home_activity_request">REQUESTS</string>
    <string name="vendor_home_activity_accepted">ACCEPTED</string>
    <string name="vendor_home_activity_completed">COMPLETED</string>
    <string name="vendor_home_activity_accept">Accept</string>
    <string name="vendor_home_activity_reject">Reject</string>
    <string name="vendor_home_upload_products_upload_products">Upload Products</string>
    <string name="vendor_home_upload_products_please_upload_product_details_excelsheet">Please Upload Product Details Excelsheet</string>
    <string name="vendor_home_upload_product_your_current_disfetch_store">Your Current Disfetch Store</string>
    <string name="vendor_home_upload_product_last_updated">Last Updated</string>
    <string name="vendor_home_upload_product_total_products">Total Products</string>
    <string name="store_information_text_store_information">Store Information</string>
    <string name="store_information_activity_scan_qr">SCAN QR</string>
    <string name="store_information_acivity_fetch_history">FETCH HISTORY</string>
    <string name="store_information_activity_enter_qr_code">Enter QR Code</string>
    <string name="store_information_activity_ok"><u>OK</u></string>
    <string name="pending_products_search_products">Search Products</string>
    <string name="vendor_home_completed_price_of_the_cloth">Price:</string>
    <string name="vendor_home_completed_fetch_price_of_the_cloth">Fetch Price:</string>
    <string name="vendor_home_completed_date_of_request_of_the_cloth">Request Date:</string>
    <string name="vendor_home_completed_request_time_of_the_cloth">Time:</string>
    <string name="vendor_home_completed_request_acceptance_of_the_cloth">Acceptance Date:</string>
    <string name="vendor_home_accepted_date">Accepted Date:</string>
    <string name="vendor_home_filter_filter">Filter</string>
    <string name="vendor_home_filter_reset">RESET</string>
    <string name="vendor_home_filter_sort_by">Sort by</string>
    <string name="vendor_home_filter_date">Date</string>
    <string name="vendor_home_filter_qr_code">QR Code</string>
    <string name="vendor_home_filter_product_details">Product Details</string>
    <string name="vendor_home_filter_quote_price">Quote Price</string>
    <string name="vendor_home_filter_filter_by">Filter by</string>
    <string name="vendor_home_filter_date_by_request">Date by Request</string>
    <string name="vendor_home_filter_from">From</string>
    <string name="vendor_home_filter_to">To</string>
    <string name="vendor_home_filter_date_of_acceptance">Date Of Acceptance</string>
    <string name="vendor_home_filter_status">Status</string>
    <string name="vendor_home_filter_product_price">Product Price</string>
    <string name="vendor_home_filter_apply">Apply</string>
    <string name="VendorHomeDashBoardTotalUserShowProfile_profile">Profile</string>
    <string name="VendorHomeDashBoardTotalUserShowProfile_requested_quote">Requested Quote</string>
    <string name="VendorHomeDashBoardTotalUserShowProfile_accepted_quote">Accepted Quote</string>
    <string name="VendorHomeDashBoardTotalUserShowProfile_rejected_quote">Rejected Quote</string>
    <string name="vendor_home_dashboard_number_use_per_month">Number Use Per Month</string>
    <string name="vendor_home_dashboard_dashboard">Dashboard</string>
    <string name="product_details_product_details">Product Details</string>
    <string name="product_details_request_details">Request Date:</string>
    <string name="product_details_time">Time:</string>
    <string name="product_details_price">Price:</string>
    <string name="product_details_accepted_date">Accepted Date:</string>
    <string name="product_details_time_">Time</string>
    <string name="product_details_fetch_price">Fetch Price:</string>
    <string name="product_details_product_name">Product Name</string>
    <string name="product_details_brand">Brand</string>
    <string name="product_details_price_product">Price</string>
    <string name="product_details_type">Type</string>
    <string name="product_details_color">Color</string>
    <string name="product_details_product_id">Product Id</string>
    <string name="product_details_product_delivery">Product Delivery</string>
    <string name="product_details_issue_rasied">Issue Raised</string>
    <string name="product_details_accept">ACCEPT</string>
    <string name="product_details_reject">REJECT</string>
    <string name="product_details_send">SEND</string>
    <string name="product_details_accepting">Accepted</string>
    <string name="product_details_delivery_pending">Delivery Pending</string>
    <string name="product_details_pending">Pending</string>
    <string name="product_details_delivered">Delivered</string>
    <string name="product_details_delivering">Delivery</string>
    <string name="product_details_completed">Completed</string>
    <string name="product_details_Cancel">Cancel</string>
    <string name="profile_profile">Profile</string>
    <string name="profile_profile_information">Profile Information</string>
    <string name="profile_name">Name</string>
    <string name="profile_address">Address</string>
    <string name="profile_e_mail">E-mail</string>
    <string name="profile_contact_number">Contact Number</string>
    <string name="profile_account_information">Account Informatio</string>
    <string name="profile_account_name">Account Name</string>
    <string name="profile_account_number">Account Number</string>
    <string name="profile_account_ifcs_code">Account IFCS Code</string>
    <string name="profile_bank_name">Bank Name</string>
    <string name="profile_name_validation">Please enter the Name</string>
    <string name="profile_address_validation">Please enter the Address</string>
    <string name="profile_email_validation">Please enter the E-mail</string>
    <string name="profile_contact_number_validation">Please enter the Contact Number</string>
    <string name="account_name_validation">Please enter the Account Name</string>
    <string name="account_number_validation">Please enter the Account Number</string>
    <string name="account_ifcs_code_validation">Please enter the Account IFCS Code</string>
    <string name="account_bank_name_validation">Please enter the Bank Name</string>
    <string name="fa_plus_square_o">&#xf196;</string>
    <string name="icon_ionicon_var_android_calendar">&#xf2d1;</string>
    <string name="icon_ionicon_var_android_call">&#xf2d2;</string>
    <string name="icon_ionicon_var_android_list">&#xf391;</string>
    <string name="icon_ionicon_var_android_settings">&#xf2f7;</string>
    <string name="icon_ionicon_var_android_share_alt">&#xf3ac;</string>
    <string name="icon_ionicon_var_android_star_outline">&#xf3ae;</string>
    <string name="icon_ionicon_var_chatbox_working">&#xf11a;</string>
    <string name="icon_ionicon_var_heart">&#xf141;</string>
    <string name="icon_ionicon_var_heart_broken">&#xf31d;</string>
    <string name="icon_ionicon_var_android_contact">&#xf2d8;</string>
    <string name="icon_ionicon_var_android_contacts">&#xf2d9;</string>
    <string name="icon_ionicon_var_ios_heart">&#xf443;</string>
    <string name="icon_ionicon_var_ios_heart_outline">&#xf442;</string>
    <string name="icon_ionicon_var_chevron_left">&#xf124;</string>
    <string name="icon_ionicon_var_ios_email_outline">&#xf422;</string>
    <string name="icon_ionicon_var_ios_information_outline">&#xf44c;</string>
    <string name="icon_ionicon_var_ios_location_outline">&#xf455;</string>
    <string name="icon_ionicon_var_ios_people_outline">&#xf47b;</string>
    <string name="icon_ionicon_var_ios_person_outline">&#xf47d;</string>
    <string name="icon_ionicon_var_ios_unlocked_outline">&#xf4c8;</string>
    <string name="icon_ionicon_var_log_out">&#xf29f;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_otp">OtpActivity</string>
    <string name="otp">OTP*</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="title_activity_seller_dashboard">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_registration">UserRegistration</string>
</resources>