<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/name_of_an_image"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:gravity="top"
                android:layout_marginTop="20dp"
                android:text="BUYERS"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_email"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="90dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_activity_login_icon"
                    android:src="@drawable/login_user_icon"
                    android:padding="1dp"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:hint="@string/login_activity_email_edittext"
                    android:minLines="1"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/text_sixteen"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_height="1dp"
                android:background="@color/blur_black_color"/>

            <LinearLayout
                android:id="@+id/linear_layout_password"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_activity_password_icon"
                    android:src="@drawable/login_password_icon"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/img_eye"
                    android:hint="@string/login_activity_password_edittext"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:minLines="1"
                    android:inputType="textPassword"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="@dimen/text_sixteen"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/img_eye"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="right"
                    android:tint="@color/black"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_eye"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:background="@color/blur_black_color"/>

            <TextView
                android:id="@+id/tvForgetPswd"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_gravity="end"
                android:textSize="@dimen/text_forteen"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:text="@string/login_activity_forgot_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/login_login_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_activity_login_button"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg_fill_orange"
                android:layout_width="150dp"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/login_activity_registeration_textview"
                    android:textSize="@dimen/text_forteen"
                    android:textColor="@color/blur_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/login_activity_registeration_here_textview"
                    android:textSize="@dimen/text_forteen"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/blur_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:text="@string/login_activity_registeration_click_textview"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_forteen"
                    android:textColor="@color/black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_login_types"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/blur_black_color"/>
                    <TextView
                        android:text="@string/login_activity_or"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/text_twelve"
                        android:textColor="@color/black_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/blur_black_color"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/imgFb"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_login_fb"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btnFb"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp" />

                    <ImageView
                        android:id="@+id/imgGoogle"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_login_google_plus"/>

                    <ImageView
                        android:id="@+id/imgTwitter"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_login_twitter"/>

                    <ImageView
                        android:id="@+id/imgLinkedIn"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_login_linkedin"/>

                    <com.twitter.sdk.android.core.identity.TwitterLoginButton
                        android:id="@+id/btnTwitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btnGoogle"
                        android:visibility="gone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


</ScrollView>





</RelativeLayout>